--- a/views/clients.handlebars
+++ b/views/clients.handlebars
@@ -12,7 +12,7 @@
       {{!-- get the length of the data or how many reviews  --}}
       {{#if reviewsdata}}
       <p>
-        {{reviewsdata.length}}
+        {{reviewsdata.length}} Commentaires
       </p>
       {{/if}}
     </div>
@@ -33,6 +33,8 @@
         <input type="text" id="name" name="name" class="reviewer_name" required>
         <label for="message">Message:</label>
         <textarea id="message" name="message" rows="4" class="reviewer_message" required></textarea>
+        <label for="myfile">Select a file:</label>
+        <input type="file" id="myfile" name="myfile">
         <div class="stars">
           <h5>5 etoil est la bonne lol</h5>
           <i class="fas fa-star" data-id="1"></i>
