--- a/views/clients.handlebars
+++ b/views/clients.handlebars
@@ -1,6 +1,6 @@
 
 <div class="client_container" id="client">
-
+  <a href="/"><button class="accueil"><i class="fa-solid fa-backward"></i> Accueil</button></a>
   <div class="review_section">
     <div class="stars">
       <h1>Commentaires</h1>
@@ -12,7 +12,7 @@
       {{!-- get the length of the data or how many reviews  --}}
       {{#if reviewsdata}}
       <p>
-        {{reviewsdata.length}} Commentaires
+        {{reviewsdata.length}} Nouveau   Commentaires
       </p>
       {{/if}}
     </div>
@@ -28,23 +28,23 @@
   </div>
   <div class="review-submit">
     <section class="review-form">
-      <form class="form-review">
+      <form class="form-review" enctype="multipart/form-data">
         <label for="name">Nom:</label>
-        <input type="text" id="name" name="name" class="reviewer_name" required>
+        <input type="text" id="name" name="name" class="reviewer_name" placeholder="Ajouter Ton Nom" required>
         <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="4" class="reviewer_message" required></textarea>
-        <label for="myfile">Select a file:</label>
+        <textarea id="message" name="message" rows="4" class="reviewer_message" placeholder="Ajouter Un Commentaire entre 10 et 20 mots" required></textarea>
+        <label for="myfile">Ajouter Une Image:</label>
         <input type="file" id="myfile" name="myfile">
-        <div class="stars">
+        {{!-- <div class="stars">
           <h5>5 etoil est la bonne lol</h5>
           <i class="fas fa-star" data-id="1"></i>
           <i class="fas fa-star" data-id="2"></i>
           <i class="fas fa-star" data-id="3"></i>
           <i class="fas fa-star" data-id="4"></i>
           <i class="fas fa-star" data-id="5"></i>
-        </div>
+        </div> --}}
         <div class="review_btn_submit_wrapper">
-          <button type="submit" class="review_btn_submit">Submit</button>
+          <button type="submit" class="review_btn_submit" style="margin: 10px;">Ajouter</button>
         </div>
       </form>
     </section>
@@ -70,7 +70,7 @@
     
     <div class="testimonial-card">
       <div class="testimonial-content">
-        <img src="/images/dog.png" alt="Client 2">
+        <img src="/images/dog.png" alt="Client 3">
         <h2>Jackson</h2>
         <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
       </div>
@@ -78,7 +78,7 @@
 
     <div class="testimonial-card">
       <div class="testimonial-content">
-        <img src="/images/dog4.jpg" alt="Client 2">
+        <img src="/images/dog4.jpg" alt="Client 4">
         <h2>John</h2>
         <p>"Our picky eater, Bella, absolutely loves this dog! Her coat is shinier, and she has so much more energy."</p>
       </div>
@@ -86,7 +86,7 @@
 
     <div class="testimonial-card">
       <div class="testimonial-content">
-        <img src="/images/dpg2.jpg" alt="Client 2">
+        <img src="/images/dpg2.jpg" alt="Client 4">
         <h2>Lucas</h2>
         <p>"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
       </div>
@@ -95,10 +95,10 @@
     {{#each reviewsdata}}
       <div class="testimonial-card">
         <div class="testimonial-content">
-          <img src="/images/dpg2.jpg" alt="Client 2">
-          <h2>{{createdAt}}</h2>
-          <p>{{name}}</p>
-          <div>{{stars_num}}</div>
+          <img src="/images/default.jpg" alt='{{id}}'>
+          {{!-- <h2>{{createdAt}}</h2> --}}
+          <h2>{{name}}</h2>
+          <p class="my_comment">{{my_comment}}</p>
         </div>
       </div>
     {{/each}}
