--- a/views/partials/availableDogs.handlebars
+++ b/views/partials/availableDogs.handlebars
@@ -1,28 +1,35 @@
 <div class="availability-section" id="available_dogs">
-    <div class="dog-card">
-        <img src="/images/Kemmy.jpg" alt="Golden Retriever">
-        <h2>Golden Retriever</h2>
+    <div class="dog-card" data-id="1">
+        <img src="/images/lolo/new1.jpg" alt="Golden Retriever">
+        <h2>Dixon</h2>
         <p>Friendly and playful. Loves kids and other pets.</p>
         <p>Price: $2500</p>
         <button class="contact-me">Contact Seller</button>
     </div>
-    <div class="dog-card">
-        <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
-        <h2>German Shepherd</h2>
+    <div class="dog-card" data-id="2">
+        <img src="/images/lolo/new.png" alt="Golden Retriever">
+        <h2>Badger</h2>
+        <p>Friendly and playful. Loves kids and other pets.</p>
+        <p>Price: $2500</p>
+        <button class="contact-me">Contact Seller</button>
+    </div>
+    <div class="dog-card" data-id="3">
+        <img src="/images/lolo/newlittleBoy.png" alt="German Shepherd">
+        <h2>Pilot</h2>
         <p>Intelligent and loyal. Great guard dog.</p>
         <p>Price: $2500</p>
         <button class="contact-me">Contact Seller</button>
     </div>
-    <div class="dog-card">
-        <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
-        <h2>German Shepherd</h2>
+    <div class="dog-card" data-id="4">
+        <img src="/images/lolo/newGirl.png" alt="German Shepherd">
+        <h2>Gibson</h2>
         <p>Intelligent and loyal. Great guard dog.</p>
         <p>Price: $2500</p>
         <button class="contact-me">Contact Seller</button>
     </div>
-    <div class="dog-card">
-        <img src="/images/386473791_857568445577137_1308291614278272068_n.jpg" alt="German Shepherd">
-        <h2>German Shepherd</h2>
+    <div class="dog-card" data-id="5">
+        <img src="/images/lolo/newBoy.png" alt="German Shepherd">
+        <h2>Birdie</h2>
         <p>Intelligent and loyal. Great guard dog.</p>
         <p>Price: $2500</p>
         <button class="contact-me">Contact Seller</button>
